block scope defination updated

--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>Global Scope :</strong> If a variable is declared outside all functions or curly braces ({}), it exists in the global scope. The global variables can be accessed by any line of code in the program, including inside blocks.
+                        <strong>Global Scope :</strong> If a variable is declared outside all functions or curly braces ({}), it exists in the block scope. The global variables can be accessed by any line of code in the program, including inside blocks.
                          <br><br>
                         <strong>Block Scope :</strong> If a variable is declared inside any curly braces({}).its exists in the global scope. let and const are block scoped and var is function scoped. We can not access variables declared with let and const inside a block, outside that particular block. but we can access variable declared with var keyword in this case.<br><br>
                         
